ingress-oauth2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: oauth2-ingress
spec:
  rules:
    - host: DOMAIN
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy-svc
              servicePort: 4180
  tls:
    - hosts:
      - DOMAIN
      secretName: tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$request_uri"
spec:
  tls:
    - hosts:
      - DOMAIN
      secretName: tls-secret
  rules:
  - host: DOMAIN
    http:
      paths:
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 80
